sumo/tests/sumo/extended/wauts/errors/cross3ltl_error_missing_switchtime/errors.sumo
Error: Attribute 'time' is missing in definition of waut 'w1'.
Quitting (on error).
